<resources>
    <string name="app_name">homeWork_3_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_gmail">Enter gmail</string>
    <string name="theme">theme</string>
    <string name="message">message</string>
    <string name="gmail_com">Gmail.com</string>
    <string name="send">SEND</string>
</resources>