<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gmail_com"
        android:padding="34dp"
        android:gravity="center"
        android:textSize="46sp"
        android:textStyle="bold"
        android:background="@color/gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- TODO: Update blank fragment layout -->
        <EditText
            android:id="@+id/et_enter_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_border"
            android:drawableStart="@drawable/gmail"
            android:drawablePadding="30dp"
            android:hint="@string/enter_gmail"
            android:padding="12dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_border"
            android:drawableStart="@drawable/about_svgrepo_com"
            android:drawablePadding="30dp"
            android:hint="@string/theme"
            android:padding="12dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_message_for_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_border"
            android:drawableStart="@drawable/message_square_lines_svgrepo_com"
            android:drawablePadding="30dp"
            android:hint="@string/message"
            android:padding="12dp" />

    </RelativeLayout>


    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/send"/>

</LinearLayout>